# advent-of-code

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
2024/: day-1.py  day-2.py  day-3.py  day-4.py  day-5.py  day-6.py
