[project]
name = "advent-of-code"
version = "0.1.0"
description = "My Advent of Code solutions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aocd>=0.1",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "ruff>=0.8.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201","FBT001","FBT002"]
